Changelog
=========

2.5.0 (unreleased)
------------------

- Drop Plone 4.1 and 4.2 support. [jone]


2.4.7 (2014-09-15)
------------------

- Update translations [msom]


2.4.6 (2014-06-02)
------------------

- Add Plone 4.3 test config.
  [mathias.leimgruber]

- Update French translations.
  [tschanzt]


2.4.5 (2013-10-16)
------------------

- Add French translations.
  [tschanzt]


2.4.4 (2013-08-14)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]


2.4.3 (2013-04-23)
------------------

- Updated translation.
  [Julian Infanger]


2.4.2 (2013-01-30)
------------------

- Hide fields in task, using a dictionary instead of False or -1.
  [Julian Infanger]

- onegov.ch approved: add badge to readme.
  [jone]

- Use safe-html-transform for textfield (security audit).
  [mathias.leimgruber]

- Workspace details PDF: do not show empty listings.
  [jone]

- Fix task portlet for anonymous users and zope users. #5
  [jone]

- Fix task creation for Plone 4.2. #4
  [jone]


2.4.1 (2012-10-16)
------------------

- Fix history.txt
  [mathias.leimgruber]


2.4 (2012-10-16)
----------------

- Use ftw.calendarwidget for datetime fields.
  [mathias.leimgruber]

- Make Portlet work with Users that don't Userid as Loginname.
  [tschanzt]


2.3.5 (2012-06-20)
------------------

- Add task view tests.
  [jone]

- Fix template when task has no workflow.
  [jone]

- Testing: use p.a.testing instead of PloneTestCase.
  [jone]


2.3.4 (2012-06-13)
------------------

- Fixed translations.
  [Julian Infanger]


2.3.3 (2012-03-19)
------------------

- Fix manifest.in
  [mathias.leimgruber]


2.3.2 (2012-03-19)
------------------

- Add tasks listing for ftw.workspace details PDF.
  [jone]


2.3.1 (2012-03-05)
------------------

- Use th instead of td.table_label for heading in vertical listing table.
  [Julian Infanger]

- Use plone default classes for table.
  [Julian Infanger]


2.3 (2011-09-08)
----------------

- Added plone.po file
  [ttschanz]

